--- a/GerenciadorCondominios/GerenciadorCondominios.csproj
+++ b/GerenciadorCondominios/GerenciadorCondominios.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GerenciadorCondominios.BLL\GerenciadorCondominios.BLL.csproj" />
+    <ProjectReference Include="..\GerenciadorCondominios.DAL\GerenciadorCondominios.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
