--- a/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
+++ b/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
@@ -8,8 +8,12 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Mapeamentos\" />
     <Folder Include="Repositorios\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
